<resources>
    <string name="app_name">Movie List 5</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="welcome_username">Welcome, Username!</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="update">Update</string>
    <string name="input_data">Input Data</string>
    <string name="description">Description</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="don_t_have_account">Don\'t have account? Register here</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="turning_red">Turning Red</string>
    <string name="release_date">Release Date:</string>
    <string name="_2022_03_10">2022–03–10</string>
    <string name="average_rating">Average Rating:</string>
    <string name="_7_5">7.5</string>
    <string name="read_more">Read more</string>
    <string name="about_movie">About Movie</string>
</resources>