<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:background="@color/primary_2">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_poster"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        app:srcCompat="@drawable/poster_turning_red" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextTitle.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cerapro"
        android:text="Title:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextBody.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:maxLines="2"
        android:text="@string/turning_red"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_title2"
        style="@style/TextTitle.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/TextBody.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:text="@string/_2022_03_10"
        app:layout_constraintStart_toStartOf="@+id/tv_title2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title2" />

    <TextView
        android:id="@+id/tv_title4"
        style="@style/TextTitle.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/average_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

    <TextView
        android:id="@+id/tv_average_rating"
        style="@style/TextBody.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:text="@string/_7_5"
        app:layout_constraintStart_toStartOf="@+id/tv_title4"
        app:layout_constraintTop_toBottomOf="@+id/tv_title4" />

    <TextView
        android:id="@+id/tv_read_more"
        style="@style/TextBody.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/read_more"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_average_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>